# dashboard

./: .gitignore  README.md  _web-check-diag.mjs  art_plan.md  index.html  package-lock.json  package.json  plan.md  plan_2.md  tsconfig.json  vite.config.ts  wrangler.jsonc
.claude/: CLAUDE.md
docs/: architecture.md  design.md  hosting.md  idea.md  roadmap.md  todo.md
evals/: compaction.eval.ts  fixtures.ts  models.ts  permissions.eval.ts  router.eval.ts  scorers.ts  tools.eval.ts
functions/: __proxy.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_notes.sql  0003_agents.sql  0004_pipelines.sql  0005_automations.sql  0006_semester.sql  0007_applications.sql  0008_flashcards.sql  0009_library.sql  0010_permission_cleanup.sql  0011_projects.sql  0012_categories.sql  0013_search_web.sql
src-tauri/src/: lib.rs  main.rs
src/ai/agents/: agents.test.ts  factory.test.ts  factory.ts  knowledge.ts  (+4 more)
src/app/: Shell.tsx  Sidebar.tsx  bootstrap.ts  runtime.tsx
src/components/: PermissionLevelSelect.tsx
src/db/: client.ts  db.test.ts  migrationPlan.test.ts  migrationPlan.ts  tauriClient.ts  testClient.ts  webClient.ts  webClient.worker.ts
src/lib/: astro.test.ts  astro.ts  backup.ts  categories.ts  drafts.test.ts  drafts.ts  env.ts  ics.test.ts  ics.ts  ids.ts  navPersist.test.ts  navPersist.ts  openExternal.ts  recurrence.test.ts  recurrence.ts  schemas.ts  sm2.test.ts  sm2.ts  template.test.ts  template.ts
src/styles/: globals.css
(+135 files in other folders)
